--- a/src/VainBot/project.json
+++ b/src/VainBot/project.json
@@ -1,10 +1,13 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
+    "Discord.Net": "1.0.0-rc-00546",
+    "Discord.Net.Commands": "1.0.0-rc-00546",
+    "Discord.Net.WebSocket": "1.0.0-rc-00546",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
