--- a/src/VainBot/project.json
+++ b/src/VainBot/project.json
@@ -23,6 +23,6 @@
     }
   },
   "tools": {
-    "Microsoft.EntityFrameworkCore.Tools.DotNet":  "1.1.0-preview4"
+    "Microsoft.EntityFrameworkCore.Tools.DotNet": "1.1.0-preview4-final"
   }
 }
