--- a/src/VainBot/VainBot.csproj
+++ b/src/VainBot/VainBot.csproj
@@ -13,10 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net.Commands" Version="1.0.0-rc-00608" />
-    <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc-00608" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="1.0.0-rc-00608" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.0" />
+    <PackageReference Include="Discord.Net.Commands" Version="1.0.0-rc-00610" />
+    <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc-00610" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="1.0.0-rc-00610" />
+    <PackageReference Include="SapientGuardian.EntityFrameworkCore.MySql" Version="7.1.19" />
   </ItemGroup>
 
 </Project>
