--- a/src/VainBotDiscord/VainBotDiscord.csproj
+++ b/src/VainBotDiscord/VainBotDiscord.csproj
@@ -14,10 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net.Commands" Version="1.0.0-rc3-00745" />
-    <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc3-00745" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="1.0.0-rc3-00745" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.1.0" />
+    <PackageReference Include="Discord.Net.Commands" Version="1.0.0-rc3-00746" />
+    <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc3-00746" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="1.0.0-rc3-00746" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.3.0-beta1" />
     <PackageReference Include="NodaTime" Version="2.0.2" />
     <PackageReference Include="SapientGuardian.EntityFrameworkCore.MySql" Version="7.1.23" />
   </ItemGroup>
