--- a/src/VainBotDiscord/VainBotDiscord.csproj
+++ b/src/VainBotDiscord/VainBotDiscord.csproj
@@ -14,11 +14,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net.Commands" Version="1.0.0-rc3-00766" />
-    <PackageReference Include="Discord.Net.Core" Version="1.0.0-rc3-00766" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="1.0.0-rc3-00766" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.3.0-beta2" />
-    <PackageReference Include="NodaTime" Version="2.0.3" />
+    <PackageReference Include="Discord.Net.Commands" Version="1.0.1" />
+    <PackageReference Include="Discord.Net.Core" Version="1.0.1" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="1.0.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.3.0-beta3" />
+    <PackageReference Include="NodaTime" Version="2.1.0" />
     <PackageReference Include="SapientGuardian.EntityFrameworkCore.MySql" Version="7.1.23" />
   </ItemGroup>
 
